# shitass-PQ-chat

./: .gitignore  CLAUDE.md  README.md  SPEC.md  TODO.md  client.py  client_base.py  config.py  config_handler.py  config_manager.py  configs.py  debug_client.py  debug_gui_client.py  file_utils.py  gui_client.py  network_utils.py  new_client.py  pyproject.toml  requirements.txt  requirements_server.txt  run_client.py  server.py  shared.py  speed_test.py  test_secure_chat.py  ui_base.py  wordlist.txt
GUIs/: GUI.py  TUI.py  configs.py
SecureChatABCs/: client_base.py  protocol_base.py  ui_base.py
UIs/: GUI.py  TUI.py  debug_GUI.py
client/: connection_manager.py  deaddrop_manager.py  file_transfer_manager.py  key_exchange_manager.py  voice_call_manager.py
clients/: checks.py
config/: config_handler.py  config_manager.py  configs.py
docs/: IMPLEMENTATION.md  SPEC.md
protocol/: _rekey_state.py  constants.py  create_messages.py  crypto_classes.py  error_descriptions.json  errors.py  file_handler.py  parse_messages.py  shared.py  types.py  utils.py
tests/: conftest.py  encryption_vectors.json  key_derivation_vectors.json  test_create_messages.py  test_deaddrop_manager.py  test_encryption_vectors.py  test_errors.py  test_file_handler.py  test_file_transfer_manager.py  test_file_utils.py  test_fuzz_crypto.py  test_fuzz_parse_messages.py  test_fuzz_protocol_message.py  test_key_derivation_vectors.py  test_network_utils.py  test_new_client.py  test_protocol_crypto.py  test_protocol_shared.py  test_protocol_utils.py  test_voice_call_manager.py
themes/: dark.json  (+2 more)
(+6 files in other folders)
